# PackageStatistics

./: README.md  pyproject.toml  tox.ini
src/: package_statistics.py
tests/: test_package_statistics.py
