[tool.poetry]
name = "PackageStatistics"
version = "0.1.0"
description = "Console application that prints the top 10 packages with the most files associated with them"

license = "MIT"

authors = [
    "Benjamin"
]

packages = [
    { include = "src" }
]

readme = 'README.md'
keywords = ['package statistics', 'Debian']

[tool.poetry.dependencies]
python = "3.10.*"
click = "*"
requests = "*"
pandas = "*"
toml = "*"

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "*"
black = "*"
flake8 = "*"
bandit = "*"
isort = "*"
interrogate = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
